# snft

./: Cargo.toml  package-lock.json  package.json
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  main  processor.rs  state.rs
src/client/: main.ts  snft.ts  token.ts
