
[package]
name = "snft"
version = "0.0.1"
description = "snft"
authors = ["snft"]
repository = "https://github.com/artyartyart/snft"
license = "Apache-2.0"
homepage = "http://www.snft.show/"
edition = "2018"



[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.2"
solana-program = "1.6.6"
thiserror = "1.0.24"
spl-token = {features = ["no-entrypoint"]}
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.6.6"
solana-sdk = "1.6.6"


[lib]
name = "ufit"
crate-type = ["cdylib", "lib"]